[package]
name = "vimsweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.build-override]
opt-level = "z"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1

[dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "wincon", "sysinfoapi"], default-features = false }