[package]
name = "microsweeper"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.release.build-override]
opt-level = "z"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1

[dependencies]
